<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/personDetailAvatar_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:contentDescription="@string/avatar_img_desc"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/personDetailName_txt"
            style="@style/text_medium"
            android:contentDescription="@string/personName_txt_desc"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personDetailAvatar_img"
            tools:text="Gopi Neelam" />

        <TextView
            android:id="@+id/personDetailJobTitle_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/jobTitle_txt_desc"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personDetailName_txt"
            tools:text="Android Application developer" />

        <TextView
            android:id="@+id/personDetailEmail_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/personDetailEmail_txt_desc"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personDetailJobTitle_txt"
            tools:text="abc@gmail.com" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>